# code-examples

./: LICENSE  README.md  tasks.md
docs/patterns/: patterns_TEMPLATE.md
docs/web/: web-architecture.md
src/cpp/boost/: CMakeLists.txt  demo_string.cpp
src/java/JavaLanguageFeatures/: pom.xml
src/java/JavaLanguageFeatures/src/main/java/ua/knu/csc/iss/: Main.java  ObjectCreationDestructionDemo.java
src/java/web-backend/01-hello-world/jakarta/hello-world-jakarta/: deploy.sh  pom.xml
src/java/web-backend/02-static-website/jakarta/static-website-jakarta/: deploy.sh  pom.xml
src/java/web-backend/02-static-website/jakarta/static-website-jakarta/src/main/webapp/: index.html  script.js  styles.css
src/java/web-backend/03-dynamic-website/jakarta/dynamic-website-jakarta/: deploy.sh  pom.xml
src/java/web-backend/03-dynamic-website/jakarta/dynamic-website-jakarta/src/main/webapp/: greeting.jsp
src/java/web-backend/03-dynamic-website/jakarta/dynamic-website-jakarta/src/main/webapp/js/: clock.js
src/java/web-backend/04-form-handling/jakarta/form-handling-jakarta/: deploy.sh  pom.xml
src/java/web-backend/04-form-handling/jakarta/form-handling-jakarta/src/main/webapp/: contact.html  contactnoprg.html  viewContacts.jsp  viewContactsNoJSTL.jsp
src/java/web-backend/05-todo-db/jakarta/todo-db/: deploy.sh  pom.xml
src/java/web-backend/05-todo-db/jakarta/todo-db/src/main/webapp/: add.jsp  index.jsp  update.jsp
src/python/google_drive/: filesystem.py  google_drive.py  obtain_credentials.md  patterns.md  requirements.txt
tasks/: google-drive.md  web-backend.md
(+21 files in other folders)
